<resources>
    <string name="app_name" translatable="false">Smart Serve</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Serve</string>
    <string name="nav_header_subtitle">rajeev-ran@hcl.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>

    <string name="menu_homeremedies" translatable="false">Home Remedies</string>
    <string name="menu_healthservices" translatable="false">Health Services</string>
    <string name="menu_dietplans" translatable="false">Diet Plans</string>
    <string name="menu_menu4" translatable="false">Menu 4</string>
    <string name="menu_connect" translatable="false">Connect</string>

    <string name="home_second">Home Second</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="tamil">தமிழ்</string>
    <string name="telugu">తెలుగు</string>
    <string name="kannada">ಕನ್ನಡ</string>
    <string name="malayalam">മലയാളം</string>
    <string name="bengali">বাংলা</string>
</resources>
