<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_homeremedies"
            android:icon="@drawable/ic_menu_homeremedies"
            android:title="@string/menu_homeremedies" />

        <item
            android:id="@+id/nav_healthservice"
            android:icon="@drawable/ic_menu_healthservices"
            android:title="@string/menu_healthservices" />

        <item
            android:id="@+id/nav_dietplans"
            android:icon="@drawable/ic_menu_dietplans"
            android:title="@string/menu_dietplans" />

        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

        <item
            android:id="@+id/nav_connect"
            android:icon="@drawable/ic_menu_connect"
            android:title="@string/menu_connect" />
    </group>
</menu>
